@@ -1,5 +1,9 @@
 2012-05-21  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/53409
+	* tree-vect-loop.c (vect_analyze_loop_operations): Don't check
+	vinfo_for_stmt (op_def_stmt) if op_def_stmt isn't inside loop.
+
 	PR tree-optimization/53410
 	* fold-const.c (fold_binary_loc): Use build_zero_cst (type)
 	instead of build_int_cst (type, 0) where vector types might be
